--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,5 +1,14 @@
+body {
+  background-color: ghostwhite;
+  
+  
+}
+
 .main-timeline {
-  background-color: lightblue;
+  background-color: #eeeeee;
+  border: solid black;
+  border-radius: 10px 10px 10px;
+  box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.5);
 }
 
 #snaptarget { height: 80px;   width:800px; }
@@ -11,15 +20,19 @@
    float: left;
    margin: 0 10px 10px 0;
    font-size: .9em;
-   border: 1px;
-   border-radius: 10px 5px 10px;
+   border: solid black;
+   border-radius: 10px 10px 10px;
 }
 
 .draggable-content:hover {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 #sample-list {
   float: right;
   margin-right: 400px;
+}
+
+#sample-list li:hover {
+  background-color: lightgrey;
 }
