--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,9 @@
 <div id="snaptarget" class="main-timeline">
 </div>
 
+<div id="snaptarget" class="main-timeline">
+</div>
+
 {{!--<div id="draggableBox" class="draggable-content">
 </div>--}}
 
