--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,11 +3,13 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
     <meta charset="UTF-8">
-    <title>DJ Simulator</title>
+    <title>DJ Wannabe</title>
 </head>
 <body>
+    {{>header}}
         <div id="wrapper">
             {{{ body }}}
         </div>
