--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,6 +5,7 @@ body {
 
 #header {
   font-size: 70px;
+  text-align: center;
 }
 
 .main-timeline {
@@ -49,7 +50,10 @@ body {
 
 #sample-list {
   float: right;
+  padding: 40px;
   margin-right: 500px;
+  border-radius: 5px;
+  border: solid #008395;
 }
 
 #sample-list li:hover {
@@ -59,6 +63,25 @@ body {
 
 #play-all-button {
   position: absolute;
-  top: 135px;
-  left: 250px;
+  top: 180px;
+  left: 880px;
+}
+
+#inactive-samples {
+  float: left;
+  display: block;
+  margin-top: 200px;
+  margin-left: -550px;
+  border-radius: 5px;
+  border: solid #008395;
+}
+
+#wrapper {
+  margin: 0 auto;
+  height: 1000px;
+  width: 1500px;
+  padding: 10px;
+  background-color: #9DCDF2;
+  border-radius: 5px;
+  border: solid darkslategray;
 }
