--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -19,6 +19,11 @@ body {
   text-align: center;
 }
 
+#header img {
+  width: 80px;
+  height: 58px;
+}
+
 .main-timeline { display: inline-block; margin-bottom: 75px; }
 
 #snaptarget { height: 90px; width:800px; }
