--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -93,6 +93,7 @@ body {
 #sample-list:hover { opacity: 1; }
 #sample-list li:hover { background-color: #008395; cursor: pointer; }
 
+
 #play-all-button {
   color: #abc4d6;
   float: left;
@@ -111,8 +112,20 @@ body {
   transition: color 0.1s;
 }
 
+#record-button { 
+  color: red; 
+  opacity: 0.5;
+  float: left;
+  margin-top:10px;
+  margin-left: 20px;
+  font-size: 40px;
+  transition: color 0.2s;
+}
+
 #play-all-button:hover { color: #bed8ea; }
 #stop-all-button:hover { color: #bed8ea; }
+#record-button:hover { opacity: 0.7; }
+
 
 #inactive-samples {
   border-radius: 5px;
@@ -136,16 +149,6 @@ body {
   border-radius: 5px;
 }
 
-#garbageCan {
-  color: #8FB3CD;
-  font-size: 50px;
-  margin-top: 60px;
-  margin-right: 1000px;
-  padding: 20px;
-  float: right;
-  transition: color 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s, opacity 0.2s;
-}
-
 #volume-icon-up { color: ghostwhite; transition: color 0.3s; }
 
 #volume-icon-down { color: #8FB3CD; transition: color 0.3s; }
@@ -154,7 +157,7 @@ body {
   float: left;
   text-align: center;
   background-color: #4a657a;
-  width: 400px;
+  width: 450px;
   height: 60px;
   margin-top: 15px;
   border-radius: 5px;
@@ -170,4 +173,14 @@ body {
 .disabledbutton {
     pointer-events: none;
     opacity: 0.4;
+}
+
+#garbageCan {
+  color: #8FB3CD;
+  font-size: 50px;
+  margin-top: 60px;
+  margin-right: 1000px;
+  padding: 20px;
+  float: right;
+  transition: color 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s, opacity 0.2s;
 }
