--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #8FB3CD;
-  height: 100%;
-  height: auto !important;
+  /*height: 100%;*/
+  /*height: auto !important;*/
   font-family: 'Lato', sans-serif;
   margin: 0 auto -50px;
 }
@@ -10,7 +10,7 @@ body {
 
 #wrapper {
   margin: 0 auto;
-  width: 1700px;
+  /*width: 1800px;*/
   padding: 10px;
   background-color: #132f44;
   border-radius: 5px;
@@ -24,24 +24,27 @@ body {
 
 .main-timeline { display: inline-block; margin-bottom: 75px; }
 
-#snaptarget { height: 90px; width:800px; margin-bottom: 40px; margin-left: 50px; }
-#snaptarget h3 { float: left; color: #86abc4; margin-left: -20px; margin-top: 85px; margin-right: 20px; }
+#snaptarget { height: 90px; width:800px; margin-top: 20px; margin-left: 10px; }
+#snaptarget h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
-#snaptarget1 { height: 90px; width:800px; margin-left: 50px; margin-bottom: 40px;}
-#snaptarget1 h3 { float: left; color: #86abc4; margin-left: -20px; margin-top: 85px; margin-right: 20px; }
+#snaptarget1 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget1 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
-#snaptarget2 { height: 90px; width:800px; margin-left: 50px; margin-bottom: 40px;}
-#snaptarget2 h3 { float: left; color: #86abc4; margin-left: -20px; margin-top: 85px; margin-right: 20px; }
+#snaptarget2 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget2 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
-#snaptarget3 { height: 90px; width:800px; margin-left: 50px; margin-bottom: 90px;}
-#snaptarget3 h3 { float: left; color: #86abc4; margin-left: -20px; margin-top: 85px; margin-right: 20px; }
+#snaptarget3 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget3 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+
+#snaptarget4 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget4 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
 .sample-slot {
   float: left;
   margin-left: 10px;
-  margin-top: 50px;
-  height: 82px;
-  width: 82px;
+  margin-top: 10px;
+  height: 72px;
+  width: 72px;
   background-image: url("../images/playlist_bg.jpg");
   border: solid black;
   border-radius: 10px 10px 10px;
@@ -50,16 +53,17 @@ body {
 }
 
 #playlist-container {
-  margin-top: 100px;
+  margin-top: 0px;
   background-color: #1e4059;
   width: 950px;
   border-radius: 10px 10px 10px;
 }
 
+
 .draggable-content {
    background-color: ghostwhite;
-   width: 80px;
-   height: 80px;
+   width: 70px;
+   height: 70px;
    /*float: left;*/
    margin: 0 10px 10px 0;
    font-size: .9em;
@@ -72,18 +76,49 @@ body {
 
 .draggable-content:hover { opacity: 1; cursor: pointer; box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.5); }
 
-.draggable-content > img { height: 50px; width: 60px; margin-left: 10px; }
+.draggable-content > img { height: 40px; width: 50px; margin-left: 10px; }
 
 .draggable-content > i { margin-left: 10px; }
 .draggable-content i:hover { opacity: 0.7; }
 
-
-#sample-list {
-  background-color: #86abc4;
-  float: right;
-  padding: 40px;
+#sample-library {
+  z-index: 1;
+  width: 400px;
   margin-right: 0px;
-  margin-top: -670px;
+  margin-top: -685px;
+  float: right;
+}
+
+#title-bar{
+    background: #86abc4;
+    height: 25px;
+    width: 400px;
+    border-radius: 5px;
+}
+
+#title-bar h3{
+  width: 200px;
+  margin-top: 0px;
+}
+
+#minimize-button{
+  background-color: ghostwhite;
+  border:solid 1px;
+  width: 25px;
+  height: 23px;
+  float:right;
+  cursor:pointer;
+  text-align: center;
+  border-radius: 5px;
+}
+
+#box{
+  height: 400px;
+}
+
+#box ul {
+  background-color: #86abc4;
+  padding: 30px;
   border-radius: 5px;
   border: 1px solid black;
   opacity: 0.6;
@@ -97,18 +132,18 @@ body {
 #play-all-button {
   color: #abc4d6;
   float: left;
-  margin-top:10px;
-  margin-left: 20px;
-  font-size: 40px;
+  margin-top:15px;
+  margin-left: 15px;
+  font-size: 30px;
   transition: color 0.1s;
 }
 
 #stop-all-button {
   color: #abc4d6;
   float: left;
-  margin-top:10px;
-  margin-left: 20px;
-  font-size: 40px;
+  margin-top:15px;
+  margin-left: 15px;
+  font-size: 30px;
   transition: color 0.1s;
 }
 
@@ -116,9 +151,9 @@ body {
   color: red; 
   opacity: 0.5;
   float: left;
-  margin-top:10px;
-  margin-left: 20px;
-  font-size: 40px;
+  margin-top:15px;
+  margin-left: 15px;
+  font-size: 30px;
   transition: color 0.2s;
 }
 
@@ -130,7 +165,7 @@ body {
 #inactive-samples {
   border-radius: 5px;
   margin-top: 50px;
-  width: 587px;
+  width: 520px;
   min-height: 100px;
   background-color: #30546f;
   padding-top: 12px;
@@ -154,12 +189,13 @@ body {
 #volume-icon-down { color: #8FB3CD; transition: color 0.3s; }
 
 #project-controller {
-  float: left;
+  float: right;
   text-align: center;
   background-color: #4a657a;
-  width: 450px;
+  width: 400px;
   height: 60px;
-  margin-top: 15px;
+  margin-top: 0px;
+  margin-right: 420px;
   border-radius: 5px;
 }
 
@@ -167,7 +203,7 @@ body {
 
 .channel-knobs {
   margin-left: 820px;
-  margin-top: 85px;
+  margin-top: 45px;
 }
 
 .disabledbutton {
@@ -183,4 +219,13 @@ body {
   padding: 20px;
   float: right;
   transition: color 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s, opacity 0.2s;
+}
+
+#mixer-board {
+  background-color: #1e4059;
+  width: 600px;
+  height: 300px;
+  border-radius: 2px;
+  float:right;
+  margin-top: -300px;
 }
