--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -24,10 +24,7 @@ body {
 
 .main-timeline { display: inline-block; margin-bottom: 75px; }
 
-#snaptarget { height: 90px; width:800px; margin-top: 20px; margin-left: 10px; }
-#snaptarget h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
-
-#snaptarget1 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget1 { height: 90px; width:800px; margin-top: 20px; margin-left: 10px; }
 #snaptarget1 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
 #snaptarget2 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
@@ -38,6 +35,9 @@ body {
 
 #snaptarget4 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
 #snaptarget4 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+
+#snaptarget5 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
+#snaptarget5 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
 
 .sample-slot {
   float: left;
@@ -55,7 +55,7 @@ body {
 #playlist-container {
   margin-top: 0px;
   background-color: #1e4059;
-  width: 950px;
+  width: 800px;
   border-radius: 10px 10px 10px;
 }
 
@@ -185,7 +185,6 @@ body {
 }
 
 #volume-icon-up { color: ghostwhite; transition: color 0.3s; }
-
 #volume-icon-down { color: #8FB3CD; transition: color 0.3s; }
 
 #project-controller {
@@ -228,4 +227,22 @@ body {
   border-radius: 2px;
   float:right;
   margin-top: -300px;
+  border: solid black;
+}
+
+.mixer-route {
+  float: left;
+}
+
+#route1 { width: 120px; height: 300px; background-color: ghostwhite; }
+#route2 { width: 120px; height: 300px; background-color: slategray; }
+#route3 { width: 120px; height: 300px; background-color: lightcoral; }
+#route4 { width: 120px; height: 300px; background-color: lightblue; }
+#route5 { width: 120px; height: 300px; background-color: lightgreen; }
+
+#knobTest
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    height: 175px;
 }
