--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -222,27 +222,20 @@ body {
 
 #mixer-board {
   background-color: #1e4059;
-  width: 600px;
+  width: 605px;
   height: 300px;
   border-radius: 2px;
   float:right;
   margin-top: -300px;
-  border: solid black;
+  border: 1px solid black;
 }
 
-.mixer-route {
-  float: left;
-}
+.mixer-route { float: left; }
 
-#route1 { width: 120px; height: 300px; background-color: ghostwhite; }
-#route2 { width: 120px; height: 300px; background-color: slategray; }
-#route3 { width: 120px; height: 300px; background-color: lightcoral; }
-#route4 { width: 120px; height: 300px; background-color: lightblue; }
-#route5 { width: 120px; height: 300px; background-color: lightgreen; }
+#route1 { width: 120px; height: 300px; background-color: #86abc4; border-right: 1px solid black; }
+#route2 { width: 120px; height: 300px; background-color: #86abc4; border-right: 1px solid black; }
+#route3 { width: 120px; height: 300px; background-color: #86abc4; border-right: 1px solid black; }
+#route4 { width: 120px; height: 300px; background-color: #86abc4; border-right: 1px solid black; }
+#route5 { width: 120px; height: 300px; background-color: #86abc4; }
 
-#knobTest
-{
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-    height: 175px;
-}
+#knobTest { -webkit-appearance: slider-vertical; height: 100px; }
