CSS changes. project controller draggable/non-draggable option.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -24,20 +24,20 @@ body {
 
 .main-timeline { display: inline-block; margin-bottom: 75px; }
 
-#snaptarget1 { height: 90px; width:800px; margin-top: 20px; margin-left: 10px; }
-#snaptarget1 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+#snaptarget1 { height: 95px; width:750px; margin-top: 20px; margin-left: 10px; background-color: #061a29; border-radius: 5px; }
+#snaptarget1 h3 { float: left; color: #86abc4; margin-left: 5px; margin-top: 40px; margin-right: 10px; }
 
-#snaptarget2 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
-#snaptarget2 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+#snaptarget2 { height: 95px; width:750px; margin-left: 10px; margin-top: -40px; background-color: #061a29; border-radius: 5px; }
+#snaptarget2 h3 { float: left; color: #86abc4; margin-left: 5px; margin-top: 40px; margin-right: 10px; }
 
-#snaptarget3 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
-#snaptarget3 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+#snaptarget3 { height: 95px; width:750px; margin-left: 10px; margin-top: -40px; background-color: #061a29; border-radius: 5px; }
+#snaptarget3 h3 { float: left; color: #86abc4; margin-left: 5px; margin-top: 40px; margin-right: 10px; }
 
-#snaptarget4 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
-#snaptarget4 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+#snaptarget4 { height: 95px; width:750px; margin-left: 10px; margin-top: -40px; background-color: #061a29; border-radius: 5px; }
+#snaptarget4 h3 { float: left; color: #86abc4; margin-left: 5px; margin-top: 40px; margin-right: 10px; }
 
-#snaptarget5 { height: 90px; width:800px; margin-left: 10px; margin-top: -40px;}
-#snaptarget5 h3 { float: left; color: #86abc4; margin-left: -5px; margin-top: 45px; margin-right: 10px; }
+#snaptarget5 { height: 95px; width:750px; margin-left: 10px; margin-top: -40px; background-color: #061a29; border-radius: 5px; }
+#snaptarget5 h3 { float: left; color: #86abc4; margin-left: 5px; margin-top: 40px; margin-right: 10px; }
 
 .sample-slot {
   float: left;
@@ -56,7 +56,9 @@ body {
   margin-top: 0px;
   background-color: #1e4059;
   width: 800px;
+  height: 680px;
   border-radius: 10px 10px 10px;
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6);
 }
 
 
@@ -160,6 +162,10 @@ body {
 #stop-all-button:hover { color: #bed8ea; }
 #record-button:hover { opacity: 0.7; }
 
+#starting-point { margin-left: -50px; margin-right: 20px; }
+
+#locker { margin-right: -60px; margin-left: 15px; color: #abc4d6; transition: color 0.2s; }
+#locker:hover { color: ghostwhite; }
 
 #inactive-samples {
   border-radius: 5px;
@@ -198,7 +204,7 @@ body {
   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3);
 }
 
-#volumeKnob { margin-top: 15px; }
+#volumeKnob { margin-top: 15px; width: 80px; }
 
 .disabledbutton {
     pointer-events: none;
