--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -129,6 +129,17 @@ body {
 #sample-list:hover { opacity: 1; }
 #sample-list li:hover { background-color: #008395; cursor: pointer; }
 
+#project-controller {
+  float: right;
+  text-align: center;
+  background-color: #4a657a;
+  width: 400px;
+  height: 60px;
+  margin-top: 0px;
+  margin-right: 420px;
+  border-radius: 5px;
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3);
+}
 
 #play-all-button {
   color: #abc4d6;
@@ -162,7 +173,21 @@ body {
 #stop-all-button:hover { color: #bed8ea; }
 #record-button:hover { opacity: 0.7; }
 
-#starting-point { margin-left: -50px; margin-right: 20px; }
+#loop-button {
+  margin-top:15px;
+  color: #abc4d6;
+  font-size: 20px;
+  margin-right: 55px;
+  margin-left: -60px;
+}
+
+#starting-point { margin-left: -40px; margin-right: 10px; }
+
+#volume-icon-up { color: ghostwhite; transition: color 0.3s; }
+#volume-icon-down { color: #8FB3CD; transition: color 0.3s; }
+#volumeKnob { margin-top: 15px; width: 80px; }
+
+
 
 #locker { margin-right: -60px; margin-left: 15px; color: #abc4d6; transition: color 0.2s; }
 #locker:hover { color: ghostwhite; }
@@ -188,23 +213,6 @@ body {
   border: 0.5px solid black;
   border-radius: 5px;
 }
-
-#volume-icon-up { color: ghostwhite; transition: color 0.3s; }
-#volume-icon-down { color: #8FB3CD; transition: color 0.3s; }
-
-#project-controller {
-  float: right;
-  text-align: center;
-  background-color: #4a657a;
-  width: 400px;
-  height: 60px;
-  margin-top: 0px;
-  margin-right: 420px;
-  border-radius: 5px;
-  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3);
-}
-
-#volumeKnob { margin-top: 15px; width: 80px; }
 
 .disabledbutton {
     pointer-events: none;
