starting on adding audio visualizer

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -253,3 +253,18 @@ body {
 
 .mixer-volume { -webkit-appearance: slider-vertical; height: 100px; }
 .mixer-filter { -webkit-appearance: slider-vertical; height: 50px; }
+
+#visualisation {
+    height: 255px;
+    position: relative;
+    margin: 10px;
+    -webkit-box-reflect: below 3px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255,255,255,0.2)));
+}
+
+#visualisation > div {
+    width: 10px;
+    background-color: darkorange;
+    display: inline-block;
+    position: absolute;
+    bottom: 0px;
+}
