--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -138,7 +138,7 @@ body {
   margin-top: 0px;
   margin-right: 420px;
   border-radius: 5px;
-  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6)
 }
 
 #play-all-button {
@@ -253,3 +253,5 @@ body {
 
 .mixer-volume { -webkit-appearance: slider-vertical; height: 60px; }
 .mixer-filter { -webkit-appearance: slider-vertical; height: 50px; }
+
+/*.volumeMeter { border: 1px solid black; }*/
