--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -132,6 +132,9 @@ body {
 #sample-list:hover { opacity: 1; }
 #sample-list li:hover { background-color: #008395; cursor: pointer; }
 
+#sample-list > li { list-style:none; }
+
+
 #project-controller {
   float: right;
   text-align: center;
@@ -273,7 +276,7 @@ body {
 }
 
 .mutebox { margin-left: -20px; }
-
+/*
 @media only screen and (max-width: 1920px) {
     #wrapper { width: 95%; }
 
@@ -304,4 +307,4 @@ body {
 
     #title-bar{ width: 332px; border-radius: 5px; }
     #inactive-samples { width: 390px; min-height: 160px; }
-}
+}*/
